fixed some layout issues

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -643,11 +643,11 @@ pre.highlight {
 
 .shadowed {
   max-height: 100px;
-  margin-top: 40px;
+  margin-top: 20px;
   top: 50%;
   transform: translate(0, -50%);
 	filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#fff')";
 	filter: url(#drop-shadow);
-	-webkit-filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 1));
-	filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 1));
+	-webkit-filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));
+	filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));
 }
